# koika

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.rst  coq.kernel.hack.sh  default.nix  dune  dune-project  flake.nix  ignored_paths.nix  koika.opam  koika.opam.template  makes.lock.nix  makes.nix  overlay.nix  ruleGen.ml
.github/workflows/: flake-build.yml
coq/: CPS.v  CircuitGeneration.v  CircuitOptimization.v  CircuitSyntax.v  Common.v  CompactLogs.v  CompactSemantics.v  DeriveShow.v  Desugaring.v  Environments.v  FiniteType.v  Frontend.v  Interop.v  Literals.v  LoweredSyntax.v  Lowering.v  Member.v  Parsing.v  PrimitiveProperties.v  Primitives.v  Show.v  Std.v  Syntax.v  SyntaxFunctions.v  SyntaxMacros.v  Testing.v  TypeInference.v  TypedParsing.v  TypedSemantics.v  TypedSyntax.v  TypedSyntaxFunctions.v  TypedSyntaxMacros.v  TypedSyntaxProperties.v  Types.v  Vect.v  dune
coq/CompilerCorrectness/: dune
etc/: dune.v.template
etc/readme/: extra.css  pipeline.drawio
examples/: collatz.v  combinational_proof_tutorial.v  dune  dune.inc  pipeline_tutorial.v
examples/rv/: Multiplier.v  MultiplierCorrectness.v  dune  dune.inc
ocaml/: cuttlec.ml  dune
ocaml/backends/: coq.ml  cpp.ml  dot.ml  rtl.ml  verilog.ml
ocaml/backends/resources/: cuttlesim.hpp
ocaml/common/: common.ml
ocaml/cuttlebone/: cuttlebone.ml
ocaml/frontends/: lv.ml
tests/: dune  dune.inc  infinite_loop.v  reverse.v
