(coq.theory
 (name examples)
 (modules :standard)
 (mode vo)
 (theories Ltac2 Koika))

(env
 (dev (flags (:standard -w -39))))

(include dune.inc)

(rule
 (mode promote)
 (alias genrules)
 (deps (glob_files *.v) (glob_files *.lv))
 (action (with-stdout-to dune.inc (run ../ruleGen.exe examples %{deps}))))
