(coq.theory
 (name rv)
 (modules :standard)
 (mode vo)
 (theories Ltac2 Koika)
 (flags "-w" "-overriding-logical-loadpath" -nI ../../coq.kernel))

(include dune.inc)

(rule
 (mode promote)
 (alias genrules)
 (deps (file rv32i.v) (file rv32e.v))
 (action (with-stdout-to dune.inc (run ../../ruleGen.exe rv %{deps}))))
